# penpot-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  PLAN2.md  PLAN3.md  PLAN4.md  README.md  flake.nix  justfile
.github/workflows/: package.yml  release.yml
apps/desktop/: Cargo.toml  Info.plist  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/placeholder-dist/: index.html
apps/desktop/src/: checkpoint.rs  control.rs  dialog.rs  docopen.rs  gitinit.rs  home.html  home.rs  installer.rs  last_op.rs  layout.rs  lib.rs  main.rs  manage.rs  navprobe.html  navprobe.rs  navwatch.rs  overlay.rs  packages.rs  palette.html  preferences.html  preflight.rs  prefs.rs  prefs_http.rs  recent.rs  reveal.rs  status.rs  templates.html  templates.rs  vault.rs  windows.rs
apps/desktop/src/menubar/: mod.rs  model.rs
apps/desktop/src/tray/: mod.rs  model.rs
apps/desktop/tests/: live_app_m3.rs  packaged_layout_sim.rs
crates/board-export/: Cargo.toml
crates/board-export/src/: boards.rs  exporter.rs  lib.rs  names.rs  retry.rs  state.rs
crates/penpot-rpc/: Cargo.toml
crates/penpot-rpc/src/: error.rs  lib.rs  sse.rs  types.rs
crates/penpot-rpc/tests/: README.md  live.rs  wire.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/proxy/tests/: proxy_behavior.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: child.rs  lib.rs  postgres.rs  probe.rs  watchdog.rs
crates/supervisor/tests/: postgres_embedded.rs  postgres_offline.rs  watchdog_integration.rs
crates/sync-core/: Cargo.toml
crates/sync-core/fixtures/: generate.py
crates/sync-core/fixtures/cases/: noncanonical.json  numbers.json  random_numbers.json  scalars_top_level.json  structure.json  unicode.json
crates/sync-core/fixtures/expected/: noncanonical.json  numbers.json  random_numbers.json  scalars_top_level.json  structure.json  unicode.json
crates/sync-core/src/: binfile.rs  consent.rs  hash.rs  lib.rs  lock.rs  manifest.rs  normalize.rs  swap.rs  trash.rs  util.rs  ziputil.rs
crates/sync-core/tests/: live_python_fuzz.rs  manifest.rs  python_parity.rs  swap.rs  ziputil.rs
crates/sync-daemon/: Cargo.toml
crates/sync-daemon/src/: engine.rs  lib.rs  paths.rs  plan.rs  retry.rs  status.rs  tracker.rs  validate.rs  watcher.rs
crates/sync-daemon/tests/: live_m3.rs  live_m5.rs
crates/vault-index/: Cargo.toml
crates/vault-index/src/: boards.rs  contract.rs  db.rs  extract.rs  http.rs  lib.rs  packages_page.html  palette.rs  query.rs  search_page.html
crates/vault-index/tests/: oracle_parity.rs
docs/: RELEASES.md  ecosystem-concept.md  ecosystem-design.md  known-limits.md
docs/ecosystem-spikes/: contract-extractability.md  e3-linking.md  library-portability.md  plugin-supply-chain.md  token-resolver.md
docs/m0/: README.md  asset-serving.md  roundtrip-report.md  rpc-endpoints.md
docs/milestones/: d0.md  e1.md  e2.md  e3.md  e4.md  m1.md  m2.md  m3.md  m4.md  m5-notes-board-export.md  m5-notes-os-rename-move.md  m5.md  n1.md  n2.md  n3.md  n4.md  n5.md  n6.md
docs/milestones/d1/: README.md  baseline.md
docs/milestones/d2/: README.md
docs/milestones/d3/: README.md
docs/milestones/d4/: README.md
docs/milestones/d5/: README.md
docs/milestones/d6/: README.md
docs/spikes/: finder-document-association.md  navigation-control.md
docs/superpowers/plans/: 2026-07-19-d0-navigation-control-spike.md  2026-07-19-d1-offline-config-hardening.md  2026-07-19-d2-home-front-door.md  2026-07-20-d3-native-menus.md  2026-07-20-d4-preferences.md  2026-07-20-d5-documents.md  2026-07-21-d6-residue-audit.md
m0/docker/: docker-compose.yaml
nix/: README.md
scripts/: adv_helper.py  advprobe_index.sh  advprobe_invariant.sh  advprobe_packaged.sh  build-dmg.sh  build-runtime-bundle-linux.sh  build-runtime-bundle.sh  ci-bundle-smoke.sh  d0-navigation-spike.sh  d0_navprobe.py  d0_penpot_nav.cjs  d1-offline.sh  d1_egress.py  d1_surfaces.cjs  d2-home.sh  d2_home_helper.py  d2_home_nav.cjs  d3-menus.sh  d3_menus_helper.py  d4-preferences.sh  d4_prefs_helper.py  d5-documents.sh  d5-plist-check.sh  d5_docs_helper.py  d5a-finder-spike.sh  d6-residue.sh  designs-git-init.sh  e1-contract.sh  e1-fixture.py  e2-packages.sh  e2_packages_helper.py  e3-library.sh  e3_library_helper.py  e4-gallery.sh  e4_gallery_helper.py  e4_gallery_nav.cjs  e5-tokens-spike.sh  e6-library-portability-spike.sh  e7-plugins-spike.sh  fetch-penpot.sh  (+26 more)
scripts/ecosystem-spike/: diff_contracts.py  e3_boot.sh  e3_flagcombo_boot.sh  e3_flagcombo_probe.py  e3_probe.py  e5_probe.py  e5_resolver.py  e6_probe.py  e6_rewrite.py  e7_activation_nav.cjs  e7_beacon.py  e7_probe.py  extract_contract.py  import_and_dump.py  make_deltas.py  roundtrip_preserve.py
scripts/ecosystem-spike/e7-fixture-plugin/: manifest.json  plugin.js
