[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/supervisor",
    "crates/proxy",
    "crates/penpot-rpc",
    "crates/sync-core",
    "crates/sync-daemon",
    "crates/board-export",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
