[package]
name = "penpot-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "penpot-desktop"

[lib]
name = "penpot_desktop"
path = "src/lib.rs"

[[bin]]
name = "penpot-desktop"
path = "src/main.rs"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
supervisor = { path = "../../crates/supervisor" }
proxy = { path = "../../crates/proxy" }
penpot-rpc = { path = "../../crates/penpot-rpc" }
sync-core = { path = "../../crates/sync-core" }
sync-daemon = { path = "../../crates/sync-daemon" }
board-export = { path = "../../crates/board-export" }
vault-index = { path = "../../crates/vault-index" }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
http = "1"
directories = "5"
rand = "0.8"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
