[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.26"
