[package]
name = "vault-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Penpot Local vault index (N1): a disposable SQLite FTS5 full-content search index over the vault's normalized .penpot trees (text layers, board/component/color/typography names). Read-only consumer of the .penpot-sync.json manifest on the board-export pattern; reindexes a file exactly when its lastSyncedHash moves. Lives OUTSIDE the vault and is rebuilt from disk alone."

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sync-core = { path = "../sync-core" }
# bundled = vendored static libsqlite3 compiled into the binary: zero new
# HOST/runtime dependencies (PLAN2.md N1 "no new deps" reading).
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
http = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
